devs/e502/e502api.h


typedef struct st_e502_eth_config_state* t_e502_eth_config_hnd;
typedef struct st_e502_eth_svc_browse_context *t_e502_eth_svc_browse_hnd;
typedef struct st_e502_eth_svc_record *t_e502_eth_svc_record_hnd;
X502_EXPORT(int32_t) E502_UsbGetSerialList(char serials[][X502_SERIAL_SIZE], uint32_t size,
                                           uint32_t flags, uint32_t *devcnt);
X502_EXPORT(int32_t) E502_OpenUsb(t_x502_hnd hnd, const char *serial);
X502_EXPORT(int32_t) E502_UsbGetDevRecordsList(t_x502_devrec* list, uint32_t size,
                                               uint32_t flags, uint32_t* devcnt) ;
X502_EXPORT(int32_t) E502_EthConfigGetInstanceName(t_e502_eth_config_hnd cfg, char *name);
X502_EXPORT(int32_t) E502_EthConfigSetInstanceName(t_e502_eth_config_hnd cfg, const char *name);
X502_EXPORT(int32_t) E502_EthConfigSetNewPassword(t_e502_eth_config_hnd cfg, const char *new_passwd);
X502_EXPORT(int32_t) E502_SwitchToBootloader(t_x502_hnd hnd);
X502_EXPORT(int32_t) E502_ReloadFPGA(t_x502_hnd hnd);
X502_EXPORT(int32_t) E502_CortexExecCmd(t_x502_hnd hnd, uint32_t cmd_code, uint32_t par,
                                        const uint8_t* snd_data, uint32_t snd_size,
                                        uint8_t* rcv_data, uint32_t rcv_size,
                                        uint32_t tout, uint32_t* recvd_size);
X502_EXPORT(int32_t) E502_EthSvcBrowseStart(t_e502_eth_svc_browse_hnd *pcontext,
                                            uint32_t flags);
X502_EXPORT(int32_t) E502_EthSvcBrowseGetEvent(t_e502_eth_svc_browse_hnd context,
                                                t_e502_eth_svc_record_hnd *svc ,
                                                uint32_t *event, uint32_t *flags,
                                                uint32_t tout);
X502_EXPORT(int32_t) E502_EthSvcBrowseStop(t_e502_eth_svc_browse_hnd context);
X502_EXPORT(int32_t) E502_EthSvcRecordFree(t_e502_eth_svc_record_hnd svc);
X502_EXPORT(int32_t) E502_EthSvcRecordGetInstanceName(t_e502_eth_svc_record_hnd svc, char *name);
X502_EXPORT(int32_t) E502_EthSvcRecordGetDevSerial(t_e502_eth_svc_record_hnd svc, char *serial);
X502_EXPORT(int32_t) E502_EthSvcRecordResolveIPv4Addr(t_e502_eth_svc_record_hnd svc,
                                                      uint32_t *addr, uint32_t tout);
X502_EXPORT(int32_t) E502_EthSvcRecordIsSameInstance(t_e502_eth_svc_record_hnd svc1,
                                                     t_e502_eth_svc_record_hnd svc2);